Fix styles: Footer on mobile

--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -1,3 +1,9 @@
 .Root {
-	margin: 0 15px;
+	margin: 0 30px;
+}
+
+@media screen and (max-width: 680px) {
+	.Root {
+		margin: 0 10px;
+	}
 }
