--- a/src/components/Content/ContentParts/ContentFooter/ContentFooter.module.css
+++ b/src/components/Content/ContentParts/ContentFooter/ContentFooter.module.css
@@ -46,5 +46,6 @@
 
 	.filters {
 		gap: 0;
+		margin: 0;
 	}
 }
